# reddb

./: .database  .database3  .db2  .env  .gitconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PROGRESS.md  README.md  REDDB_V2_PROPOSAL.md  build.yml  file_test.ron
.github/workflows/: audit.yml  build.yml  ci.yml
benches/: basic.rs
src/: config.rs  db.rs  deserializer.rs  document.rs  error.rs  handlers.rs  index.rs  json.rs  json_ser.rs  json_store.rs  kv.rs  lib.rs  lib2.rs  main.rs  main2.rs  mainOK.rs  migrate.rs  operation.rs  query.rs  record.rs  status.rs  storage.rs  store.rs  store_handler.rs  transaction.rs  update.rs  wal.rs
src/dstore/: error.rs  handler.rs  json.rs  mod.rs  ser.rs  status.rs  store.rs
src/serializer/: bin.rs  json.rs  mod.rs  ron.rs  yaml.rs
src/storage/: file.rs  mem.rs  mod.rs
tests/: integration.rs
