[package]
name = "reddb"
version = "0.3.0"
authors = ["Pablo Magaz <magazpablo@gmail.com>"]
description = "Minimalistic in-memory embedded document data base with persistance"
homepage = "https://github.com/pmagaz/reddb"
repository = "https://github.com/pmagaz/reddb"
keywords = ["database", "store", "document", "object-document", "embedded"]
categories = ["database","database-implementations"]
documentation = "https://docs.rs/RedDb"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude =  ["tests", ".github", ".gitignore", "examples"]

[lib]
name = "reddb"
path = "src/lib.rs"

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
failure = "0.1.8"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.8"
async-trait = "0.1.42"

[dependencies.serde_json]
optional = false
version = "1.0.59"

[dependencies.ron]
optional = false
version = "0.6.2"

[dependencies.serde_yaml]
optional = false
version = "0.8.14"

[dependencies.bincode]
optional = false
version = "1.3.1"

# [features]
# default = []
# json_ser = ["serde_json"]
# ron_ser = ["ron"]
# yaml_ser = ["serde_yaml"]
#grcov ./target/debug/ -s . -t html --llvm --branch --ignore-not-existing -o ./target/debug/coverage/

[dev-dependencies]
grcov = "0.6.1"
tokio-test = "0.4.0"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt"]
features = ["prepush-hook", "run-cargo-test", "run-cargo-clippy"]

