[package]
name        = "reddb"
version     = "2.0.0"
authors     = ["Pablo Magaz <magazpablo@gmail.com>"]
description = "Minimalistic async in-memory embedded document database with closure-based queries and optional persistence"
homepage    = "https://github.com/pmagaz/reddb"
repository  = "https://github.com/pmagaz/reddb"
keywords    = ["database", "db", "async", "store", "embedded"]
categories  = ["database", "database-implementations", "asynchronous"]
documentation = "https://docs.rs/reddb"
edition     = "2021"
readme      = "README.md"
license     = "MIT OR Apache-2.0"
exclude     = ["tests", ".github", ".gitignore", "examples"]

[lib]
name = "reddb"
path = "src/lib.rs"

[dependencies]
uuid        = { version = "1",   features = ["serde", "v4"] }
anyhow      = "1"
thiserror   = "1"
tokio       = { version = "1",   features = ["macros", "fs", "sync", "rt-multi-thread", "io-util"] }
serde       = { version = "1",   features = ["derive"] }
async-trait = "0.1"

[dependencies.serde_json]
optional = true
version  = "1"

[dependencies.ron]
optional = true
version  = "0.8"

[dependencies.serde_yaml]
optional = true
version  = "0.9"

[dependencies.bincode]
optional = true
version  = "1"

[features]
default  = []
bin_ser  = ["bincode"]
json_ser = ["serde_json"]
ron_ser  = ["ron"]
yaml_ser = ["serde_yaml"]
full     = ["bin_ser", "json_ser", "ron_ser", "yaml_ser"]

[dev-dependencies]
tokio-test = "0.4"
tempfile   = "3"
criterion  = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name    = "basic"
harness = false
